fix header title and search wrapping

--- a/@antv/gatsby-theme-antv/site/components/Header.module.less
+++ b/@antv/gatsby-theme-antv/site/components/Header.module.less
@@ -73,6 +73,7 @@
 
     .subProduceName {
       margin: 0;
+      white-space: nowrap;
 
       a {
         color: rgba(0, 0, 0, 0.85);
