--- a/@antv/gatsby-theme-antv/site/components/Search.module.less
+++ b/@antv/gatsby-theme-antv/site/components/Search.module.less
@@ -1,6 +1,7 @@
 .search {
   margin-left: 32px;
   line-height: 1.5;
+  white-space: nowrap;
 
   .icon {
     color: #a3b1bf;
